# py-ipld-dag

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tox.yml
dag/: __init__.py  block.py  codec.py  dag.py  ipld_model.py  multicodec_codes.py  utils.py
dag/codecs/: __init__.py  dag_cbor.py  dag_json.py  dag_pb.py  raw.py
docs/: Makefile  authors.md  conf.py  contributing.rst  index.rst  installation.rst  readthedocs.rst  release_notes.rst
examples/: README.md  __init__.py
examples/block_interface/: __init__.py  block_interface.py
examples/cid_interface/: __init__.py  cid_interface.py
examples/multicodec_interface/: __init__.py  multicodec_interface.py
examples/multihash_interface/: __init__.py  multihash_interface.py
newsfragments/: 12.internal.rst  17.feature.rst  18.internal.rst  README.md  validate_files.py
tests/: __init__.py  test_block.py  test_codec_registry.py  test_dag.py  test_dag_cbor.py  test_dag_json.py  test_dag_pb.py  test_interop.py  test_ipld_model.py  test_raw.py  test_utils.py
