[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dag"
version = "0.1.0"
description = "MerkelDAG implementation in Python"
readme = "README.rst"
authors = [
    {name = "Dhruv Baldawa", email = "dhruv@dhruvb.com"},
]
license = {text = "MIT license"}
keywords = ["dag"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
]
requires-python = ">=3.10"
dependencies = [
    "base58==0.2.5",
    "morphys==1.0",
    "pymultihash==0.8.2",
    "pyrsistent==0.13.0",
]

[project.urls]
Homepage = "https://github.com/ipld/py-ipld-dag"

[project.optional-dependencies]
dev = [
    "Sphinx>=5.0.0",
    "build>=0.9.0",
    "bump-my-version>=1.2.0",
    "codecov",
    "coverage>=6.5.0",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-runner",
    "ruff",
    "towncrier>=24,<25",
    "tox>=4.10.0",
    "twine",
    "watchdog>=3.0.0",
    "wheel>=0.31.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = "*TestCase"

[tool.coverage.run]
source = ["dag"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "dag/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
ignore_missing_imports = true
incremental = false
strict_equality = false
strict_optional = false
warn_redundant_casts = false
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
